# project-test

./: .copier-answers.yml  README.md  pyproject.toml
src/project_test/: project_test.py  something.py
